[package]
name = "xfs_conf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xfslib = { path = "../xfslib" }
winapi = { version = "0.3", features = ["everything"] }
log = "0.4"
log4rs = "1.1"
lazy_static = "1.4.0"
log-derive = "*"
tracing = "*"

[lib]
crate-type=["cdylib"]
