[package]
name = "xfs_supp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xfslib = { path = "../xfslib" }
winapi = { version = "0.3", features = ["everything"] }
lazy_static = "1.4.0"
log = "0.4"
log4rs = "1.1"
log-derive = "*"
tracing = "*"

[lib]
crate-type=["cdylib"]
